Revision history for autodie-variables

{{$NEXT}}

0.001     2011-11-23 00:09:51 Europe/Amsterdam
          Initial version released to an unsuspecting world