@@ -1,4 +1,5 @@
 package autodie::variables;
+use 5.010;
 use strict;
 use warnings;
 
