@@ -1,6 +1,7 @@
 Revision history for autodie-variables
 
 {{$NEXT}}
+          Made autodie::variables work on perl 5.10-5.12 too (previously only worked on 5.14)
 
 0.001     2011-11-23 00:09:51 Europe/Amsterdam
           Initial version released to an unsuspecting world
